[gd_scene load_steps=17 format=3 uid="uid://bx12mj2kv3etd"]

[ext_resource type="Script" uid="uid://b8fs47pv5b0s" path="res://LOBBY/GLOBAL-config/NameSelectorMenuUI.gd" id="1_yrh2l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75oy4"]
bg_color = Color(0.774662, 0.776563, 0.468518, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.49383, 0.339885, 0.10634, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ge1ly"]
bg_color = Color(0.380392, 0.317647, 0.219608, 1)
border_width_bottom = 20
border_color = Color(0.498039, 0.345098, 0.109804, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjtwc"]
bg_color = Color(0.6, 0.878431, 0.6, 1)
border_width_left = 5
border_width_top = 10
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.494118, 0.341176, 0.105882, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xx5ci"]
bg_color = Color(0.920995, 0.920995, 0.920995, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.494118, 0.341176, 0.105882, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlj3i"]
bg_color = Color(0.0470588, 0.4, 0.921569, 1)
border_width_left = 5
border_width_bottom = 5
border_color = Color(0.0477187, 0.402203, 0.92011, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_akrsl"]
border_width_left = 5
border_width_bottom = 5
border_color = Color(0.489622, 0.489622, 0.489622, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcgkv"]
bg_color = Color(0.0611412, 0.432976, 0.974537, 1)
border_width_left = 5
border_width_bottom = 5
border_color = Color(0.0477187, 0.402203, 0.92011, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_awjb1"]

[sub_resource type="Shortcut" id="Shortcut_mwlsg"]
events = [SubResource("InputEventJoypadButton_awjb1")]

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_mwlsg"]
button_index = 5

[sub_resource type="Shortcut" id="Shortcut_dhor8"]
events = [SubResource("InputEventJoypadButton_mwlsg")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkdhv"]
bg_color = Color(0, 0, 0, 0.694118)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_yrh2l"]
button_index = 2

[sub_resource type="InputEventKey" id="InputEventKey_yrh2l"]
device = -1
keycode = 76
unicode = 108

[sub_resource type="Shortcut" id="Shortcut_awjb1"]
events = [SubResource("InputEventJoypadButton_yrh2l"), SubResource("InputEventKey_yrh2l")]

[node name="NameSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yrh2l")

[node name="Background" type="Node" parent="."]

[node name="MainBackground" type="Panel" parent="Background"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -672.0
offset_top = 40.0
offset_right = 224.0
offset_bottom = 640.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_75oy4")

[node name="Divider" type="Panel" parent="Background"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 40.0
offset_right = 20.0
offset_bottom = 940.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ge1ly")

[node name="TitleBackground" type="Panel" parent="Background"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -672.0
offset_top = 40.0
offset_right = 224.0
offset_bottom = 145.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_gjtwc")

[node name="Label" type="Label" parent="Background/TitleBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -445.0
offset_top = -46.5
offset_right = 447.0
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "Create Your Username"
horizontal_alignment = 1

[node name="P1_Control" type="Node" parent="."]

[node name="Panel" type="Panel" parent="P1_Control"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -591.0
offset_top = 250.0
offset_right = -286.0
offset_bottom = 656.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_xx5ci")

[node name="P1_Title" type="Label" parent="P1_Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -203.0
offset_right = 29.5
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Player 1"
horizontal_alignment = 1

[node name="P1_ConfirmButton" type="Button" parent="P1_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.5
offset_top = 330.0
offset_right = 2.5
offset_bottom = 360.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_styles/hover = SubResource("StyleBoxFlat_xlj3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_akrsl")
theme_override_styles/normal = SubResource("StyleBoxFlat_wcgkv")
disabled = true
shortcut = SubResource("Shortcut_mwlsg")
text = "Confirm[A]"

[node name="P1_Indicator" type="CheckBox" parent="P1_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 139.833
offset_top = 330.0
offset_right = 163.833
offset_bottom = 354.0
grow_horizontal = 2
scale = Vector2(3, 3)
button_mask = 0

[node name="InstructionsLabel" type="Label" parent="P1_Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.5
offset_top = -55.5
offset_right = 141.5
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Cycle Letters: Joystick
Next Letter: [R1]
Previous Letter : [L1]"
horizontal_alignment = 1
autowrap_mode = 2

[node name="P1_Letter1" type="Label" parent="P1_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.5
offset_top = 45.0
offset_right = -42.5
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "A"

[node name="P1_Letter2" type="Label" parent="P1_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.1666
offset_top = 45.0
offset_right = 26.8334
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "A"

[node name="P1_Letter3" type="Label" parent="P1_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 46.1667
offset_top = 45.0
offset_right = 96.1667
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "A"

[node name="P2_Control" type="Node" parent="."]

[node name="Panel" type="Panel" parent="P2_Control"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 134.0
offset_top = 250.0
offset_right = 439.0
offset_bottom = 656.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_xx5ci")

[node name="P2_Title" type="Label" parent="P2_Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.4997
offset_top = -203.0
offset_right = 29.5003
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Player 2"
horizontal_alignment = 1

[node name="P2_ConfirmButton" type="Button" parent="P2_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.833
offset_top = 330.0
offset_right = -0.833374
offset_bottom = 360.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_styles/hover = SubResource("StyleBoxFlat_xlj3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_akrsl")
theme_override_styles/normal = SubResource("StyleBoxFlat_wcgkv")
disabled = true
shortcut = SubResource("Shortcut_dhor8")
text = "Confirm[A]"

[node name="P2_Indicator" type="CheckBox" parent="P2_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 140.5
offset_top = 330.0
offset_right = 164.5
offset_bottom = 354.0
grow_horizontal = 2
scale = Vector2(3, 3)
button_mask = 0

[node name="P2_Letter1" type="Label" parent="P2_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.5
offset_top = 45.0
offset_right = -42.5
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "A"

[node name="P2_Letter2" type="Label" parent="P2_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.1666
offset_top = 45.0
offset_right = 26.8334
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "A"

[node name="P2_Letter3" type="Label" parent="P2_Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 46.1667
offset_top = 45.0
offset_right = 96.1667
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "A"

[node name="InstructionsLabel" type="Label" parent="P2_Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.5
offset_top = -55.5
offset_right = 141.5
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Cycle Letters: Joystick
Next Letter: [R1]
Previous Letter : [L1]"
horizontal_alignment = 1
autowrap_mode = 2

[node name="P2PanelDisabler" type="Button" parent="P2_Control/Panel"]
layout_mode = 0
offset_right = 305.0
offset_bottom = 406.0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_mkdhv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mkdhv")
disabled = true
text = "Enable Multiplayer to Unlock Player 2"

[node name="MultiplayerToggle" type="CheckBox" parent="P2_Control"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -536.0
offset_top = 176.0
offset_right = -419.0
offset_bottom = 207.0
grow_horizontal = 2
scale = Vector2(3, 3)
shortcut = SubResource("Shortcut_awjb1")
text = "Multiplayer[X]"
